css/style3.css
body {
    box-sizing: border-box;
    max-width: 90%;
    margin: auto;
    font-size: 1.2em;
}

hr {
    color: darkgray;
}

.btn {
    display: inline-block;
    text-decoration: none;
    text-align: center;
    font-size: 1em;
    color: black;
    box-shadow: 3px 3px 3px #424242;
    background-color: lightgray;
    padding: .3em;
    margin: 1em 0;
    border-radius: 5%;
}


/* Navbar */

header {
    display: flex;
}

header h1 {
    text-align: center;
    white-space: nowrap;
}

header a {
    text-decoration: none;
    color: black;
    display: flex;
    justify-content: center;
    white-space: nowrap;
}

.main_navbar {
    display: flex;
    flex-grow: 1;
    justify-content: center;
    text-align: center;
    padding: 1em;
}

header li {
    padding: 1em;
    list-style-type: none;
}

header img {
    width: 20%;
    height: 30%;
    margin: 1em;
}

/* dropdown menu */

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown_menu {
    display: none;
    position: absolute;
    background-color: #F5F5F5;
    padding-left: .3em;
    min-width: 10em;
    text-align: left;
    box-shadow: 0px 8x 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown_menu a {
    text-decoration: none;
    display: block;
}

.dropdown_menu a:hover {
    background-color: #ddd;
}

.dropdown:hover .dropdown_menu {
    display: block;
}

/* Slider Section */

.slider_section {
    text-align: center;
    margin: 6em auto;
}

.slider_section img {
    object-fit: contain;
    max-width: 100%;
    max-height: 100%;
    width: 6em;
    height: 6em;
}

.slider {
    width: 95%;
    margin: 2em auto;
    height: 15em;
    border: solid darkgray 2px;
}

.slider img {
    max-width: 100%;
    max-height: 100%;
    object-fit: cover;
}

.slider_bottom_boxes_container {
    display: grid;
    grid-gap: 1rem;
    grid-template-areas:
    "box-1 box-2 box-3";
    margin: auto;
}

.bottom_box {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin: .8em auto;
    padding: .5em;
    width: 30%;
    height: 30%;
}

.bottom_box h5 {
    margin-top: 0px;
}

.box-1 {
    grid-area: "box-1";
}

.box-2 {
    grid-area: "box-2";
}

.box-3 {
    grid-area: "box-3";
}




/* Canvas & Prints Section */


.canvases_and_prints_section {
    text-align: center;
    margin: 6em auto;
}

.img_box {
    display: grid;
    grid-gap: 15px;
    padding: 1rem;
    grid-template-areas:
    "one two"
    "three four";
}

.img_box img {
    max-width: 100%;
    object-fit: contain;
    vertical-align: center;
}

.img_1 {
    grid-area: one;
}

.img_2 {
    grid-area: two;
}

.img_3 {
    grid-area: three;
}

.img_4 {
    grid-area: four;
}


/* Photography Section */

.photography_section {
    margin: 6em auto;
    padding: 2em;
    width: 100%;
}

.photography_textbox {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-end;
    text-align: right;
}

.photo_gallery img {
    max-width: 100%;
    object-fit: contain;
    vertical-align: center;
}

.photo_gallery {
    display: grid;
    grid-gap: 5px;
    margin: 1em auto;
    grid-template-areas:
    "left left-mid-top left-mid-bottom"
    "right-mid-top right-mid-bottom right";
}

.gallery_img_1 {
    grid-area: "left";
}

.gallery_img_2 {
    grid-area: "left-mid-top";
}

.gallery_img_3 {
    grid-area: "left-mid-bottom";
}

.gallery_img_4 {
    grid-area: "right-mid-top";
}

.gallery_img_5 {
    grid-area: "right-mid-bottom";
}

.gallery_img_6 {
    grid-area: "right";
}


/* Canvas Art Section */

.canvas_art_textbox {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 6em auto;
}

.canvas_box {
    width: 100%;
    height: 15em;
    margin: auto;
    border: solid darkgray 1px;
}


/* Adventure Kits Section */


.adventure_kits_textbox {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    margin: 6em auto;
}

.adventure_kits_textbox > h2,
.adventure_kits_textbox > p {
    text-align: right;
}

.adventure_kit_mountains {
    width: 100%;
    height: 20em;
    opacity: 20%;
    text-align: right;
    position: relative;
    left: 5%;

}

/* Mobile */

@media screen and (max-width: 480px) {
    body {
    font-size: 0.8em;
    }

    header h1 {
        display: none;
    }

    .main_navbar,
    .dropdown_menu {
        display: none;
    }
}

/* Tablet */
@media screen and (max-width: 768px) and (min-width: 481px) {
    header h1 {
        display: none;
    }
    
    .main_navbar,
    .dropdown_menu {
        display: none;
    }

}

/* Laptop */

@media screen and (max-width: 1024px) and (min-width: 769px) {
    header img {
        display: none;
    }
}

/* Desktop */

@media screen and (min-width: 1025px) {
    header img {
        display: none;
    }
}

